pihole/services.yaml
---
# Source: pihole/templates/service-tcp.yaml
apiVersion: v1
kind: Service
metadata:
  name: pihole-tcp
  labels:
    app: pihole
    chart: pihole-1.7.17
    release: pihole
    heritage: Helm
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
    - port: 443
      targetPort: https
      protocol: TCP
      name: https
    - port: 53
      targetPort: dns
      protocol: TCP
      name: dns
  selector:
    app: pihole
    release: pihole
---
# Source: pihole/templates/service-tcp.yaml
apiVersion: v1
kind: Service
metadata:
  name: web
  labels:
    app: pihole
    chart: pihole-1.7.17
    release: pihole
    heritage: Helm
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: pihole
    release: pihole
---
# Source: pihole/templates/service-udp.yaml
apiVersion: v1
kind: Service
metadata:
  name: pihole-udp
  labels:
    app: pihole
    chart: pihole-1.7.17
    release: pihole
    heritage: Helm
spec:
  type: ClusterIP
  ports:
    - port: 53
      targetPort: dns-udp
      protocol: UDP
      name: dns-udp
    - port: 67
      targetPort: client-udp
      protocol: UDP
      name: client-udp
  selector:
    app: pihole
    release: pihole
