pihole/ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  namespace: pihole
  name: pihole-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod" # Encrypt using the ClusterIssuer deployed while setting up Cert-Manager
    nginx.ingress.kubernetes.io/proxy-body-size:  "50m" # Increase the size of the maximum allowed size of the client request body
spec:
  tls:
  - hosts:
    - pihole.toastedbuns.co.uk
    secretName: pihole-prod-tls
  rules:
    - host: pihole.toastedbuns.co.uk
      http:
        paths:
          - path: /
            backend:
              serviceName: pihole-tcp
              servicePort: 80
